# LIMLA

./: .gitignore  Cargo.toml  LICENSE  README.md  ROADMAP.md  subproject.md
cnn/: .gitignore  README.md  main.py  pyproject.toml
cnn/scripts/: run_experiments.py  statistical_analysis.py  test_image.py  visualize_results.py
cnn/src/: __init__.py
cnn/src/data/: dataloader.py  dataset.py  quality_paths.py
cnn/src/domain/: interfaces.py  models.py
cnn/src/infrastructure/: checkpoint.py  model_builder.py
cnn/src/presentation/: cli.py  progress.py
cnn/src/use_cases/: __init__.py  early_stopping.py  train.py
docs/i18n/: README.md
docs/i18n/pt/: README.md  ROADMAP.md  cnn-README.md  subproject.md
src/: main.rs
