[project]
name = "cnn"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "torch",
    "torchvision",
    "tqdm>=4.67.1",
    "pillow",
    "numpy",
    "scipy>=1.11.0",
    "statsmodels>=0.14.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]
